support tikkie update for products
